# python-rag-docling

./: .gitignore  README.md  main.py  pyproject.toml  rag_with_docling.ipynb  run_ragas_quick.sh  test_retrieval_improvements.py
01_rag/: python_rag_docling.py
02_rag_advanced/: RAGAS_RESULTS.md  ragas_baseline_results.json
02_rag_advanced/pipelines/: __init__.py  finbot_runtime_pipeline.py
02_rag_advanced/services/: __init__.py  document_access_index_service.py  guardrails_service.py  ragas_service.py  semantic_routing_service.py
02_rag_advanced/studies/: __init__.py  ragas_ablation_study.py
app_interface/: package-lock.json
app_interface/backend/: auth.py  main.py  runtime.py  schemas.py
app_interface/frontend/: package-lock.json  package.json
app_interface/frontend/app/: layout.tsx  page.tsx  styles.css
app_interface/frontend/app/admin/dashboard/: admin-dashboard.css  page.tsx
app_interface/frontend/app/admin/login/: admin-login.css  page.tsx
app_interface/frontend/app/chat/: chat.css  page.tsx
app_interface/frontend/app/login/: login.css  page.tsx
docs/archived_readmes/: INDEX.md  README.md  README_AUTHENTICATION_SECURITY.md  README_RETRIEVAL_IMPROVEMENTS.md  README_UI_REDESIGN.md  README_component1.md
