[project]
name = "python-rag-docling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.81.0",
    "docling-hierarchical-pdf>=0.1.5",
    "groq>=1.1.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
    "typer>=0.21.2",
]
